--- a/src/gekko_qt/src/disasm.ui
+++ b/src/gekko_qt/src/disasm.ui
@@ -42,6 +42,9 @@
     </item>
     <item>
      <widget class="QTreeView" name="treeView">
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
       <property name="indentation">
        <number>20</number>
       </property>
