--- a/src/gekko_qt/src/callstack.ui
+++ b/src/gekko_qt/src/callstack.ui
@@ -17,6 +17,9 @@
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QTreeView" name="treeView">
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
       <property name="rootIsDecorated">
        <bool>false</bool>
       </property>
