--- a/src/gekko_qt/src/gekko_regs.ui
+++ b/src/gekko_qt/src/gekko_regs.ui
@@ -24,6 +24,9 @@
     </item>
     <item>
      <widget class="QTreeWidget" name="treeWidget">
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
       <column>
        <property name="text">
         <string>Register</string>
