Now using an icon for title bar :D
git-svn-id: https://gekko-gc-emu.googlecode.com/svn/trunk@73 36332193-8412-8e5e-4a1b-12d1b2851199

--- a/src/gekko_qt/src/main.ui
+++ b/src/gekko_qt/src/main.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Gekko</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>src/pcafe/res/icon3_64x64.ico</normaloff>src/pcafe/res/icon3_64x64.ico</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
