--- a/src/gekko_qt/src/image_info.ui
+++ b/src/gekko_qt/src/image_info.ui
@@ -22,21 +22,21 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="0">
+    <item row="4" column="0">
      <widget class="QLabel" name="label_gameid">
       <property name="text">
        <string>Game ID</string>
       </property>
      </widget>
     </item>
-    <item row="4" column="0">
+    <item row="5" column="0">
      <widget class="QLabel" name="label_country">
       <property name="text">
        <string>Country</string>
       </property>
      </widget>
     </item>
-    <item row="6" column="0">
+    <item row="7" column="0">
      <widget class="QLabel" name="label_bannertext">
       <property name="text">
        <string>Banner</string>
@@ -49,14 +49,14 @@
        <bool>true</bool>
       </property>
       <property name="text">
-       <string>Mario Kart Double Dash!</string>
+       <string/>
       </property>
       <property name="readOnly">
        <bool>true</bool>
       </property>
      </widget>
     </item>
-    <item row="3" column="1">
+    <item row="4" column="1">
      <widget class="QLineEdit" name="line_gameid">
       <property name="enabled">
        <bool>true</bool>
@@ -69,7 +69,7 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="1">
+    <item row="5" column="1">
      <widget class="QLineEdit" name="line_country">
       <property name="enabled">
        <bool>true</bool>
@@ -82,13 +82,27 @@
       </property>
      </widget>
     </item>
-    <item row="6" column="1">
+    <item row="7" column="1">
      <widget class="QLabel" name="label_banner">
       <property name="text">
        <string/>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="label_developer">
+      <property name="text">
+       <string>Developer</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1">
+     <widget class="QLineEdit" name="line_developer">
+      <property name="readOnly">
+       <bool>true</bool>
       </property>
      </widget>
     </item>
