Add stepping/pausing functionality to disassembly view.
git-svn-id: https://gekko-gc-emu.googlecode.com/svn/trunk@101 36332193-8412-8e5e-4a1b-12d1b2851199

--- a/src/gekko_qt/src/disasm.ui
+++ b/src/gekko_qt/src/disasm.ui
@@ -18,6 +18,27 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
+       <widget class="QPushButton" name="button_step">
+        <property name="text">
+         <string>Step</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="button_pause">
+        <property name="text">
+         <string>Pause</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="button_continue">
+        <property name="text">
+         <string>Continue</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QPushButton" name="pushButton">
         <property name="text">
          <string>Step Into</string>
@@ -28,13 +49,6 @@
        <widget class="QPushButton" name="button_breakpoint">
         <property name="text">
          <string>Set Breakpoint</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="pushButton_2">
-        <property name="text">
-         <string>Update</string>
         </property>
        </widget>
       </item>
