--- a/src/gekko_qt/src/main.ui
+++ b/src/gekko_qt/src/main.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>735</width>
-    <height>629</height>
+    <width>1081</width>
+    <height>730</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -51,7 +51,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>735</width>
+     <width>1081</width>
      <height>20</height>
     </rect>
    </property>
@@ -82,6 +82,7 @@
      <string>&amp;View</string>
     </property>
     <addaction name="actionSingle_Window_Mode"/>
+    <addaction name="actionHotkeys"/>
    </widget>
    <addaction name="menu_File"/>
    <addaction name="menu_Emulation"/>
@@ -91,7 +92,7 @@
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionLoad_Image">
    <property name="text">
-    <string>Load Image...</string>
+    <string>Load Image ...</string>
    </property>
   </action>
   <action name="action_Exit">
@@ -134,6 +135,11 @@
    </property>
    <property name="text">
     <string>Single Window Mode</string>
+   </property>
+  </action>
+  <action name="actionHotkeys">
+   <property name="text">
+    <string>Configure &amp;Hotkeys ...</string>
    </property>
   </action>
  </widget>
