--- a/src/gekko_qt/src/image_info.ui
+++ b/src/gekko_qt/src/image_info.ui
@@ -36,7 +36,7 @@
       </property>
      </widget>
     </item>
-    <item row="7" column="0">
+    <item row="9" column="0">
      <widget class="QLabel" name="label_bannertext">
       <property name="text">
        <string>Banner</string>
@@ -62,7 +62,7 @@
        <bool>true</bool>
       </property>
       <property name="text">
-       <string>GM4P01</string>
+       <string/>
       </property>
       <property name="readOnly">
        <bool>true</bool>
@@ -82,7 +82,7 @@
       </property>
      </widget>
     </item>
-    <item row="7" column="1">
+    <item row="9" column="1">
      <widget class="QLabel" name="label_banner">
       <property name="text">
        <string/>
@@ -103,6 +103,29 @@
      <widget class="QLineEdit" name="line_developer">
       <property name="readOnly">
        <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="7" column="0">
+     <widget class="QLabel" name="label_description">
+      <property name="text">
+       <string>Description</string>
+      </property>
+     </widget>
+    </item>
+    <item row="7" column="1">
+     <widget class="QPlainTextEdit" name="edit_description">
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
+        <height>80</height>
+       </size>
+      </property>
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
+      <property name="plainText">
+       <string notr="true"/>
       </property>
      </widget>
     </item>
