--- a/src/gekko_qt/src/config/controller_config.ui
+++ b/src/gekko_qt/src/config/controller_config.ui
@@ -26,7 +26,7 @@
    <item>
     <layout class="QGridLayout" name="gridLayout">
      <item row="1" column="1">
-      <widget class="QComboBox" name="comboBox">
+      <widget class="QComboBox" name="activeControllerCB">
        <item>
         <property name="text">
          <string>Controller 1</string>
@@ -70,7 +70,7 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QComboBox" name="comboBox_2">
+      <widget class="QComboBox" name="inputSourceCB">
        <item>
         <property name="text">
          <string>Keyboard</string>
@@ -102,7 +102,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>2</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="mainStickTab">
       <attribute name="title">
